--- a/CampusPulse.html
+++ b/CampusPulse.html
@@ -29,7 +29,7 @@
   <h2>📊 Complaint Tracking</h2>
   <p>
     Each complaint is stored in a central system where admins update
-    the status as <b>Pending</b>, <b>In Progress</b>, or <b>Resolved</b>.
+    the status as <b>Pending</b>  <b>In Progress</b> <b>Resolved</b>
   </p>
 
   <h2>🛠 Technologies Used</h2>
@@ -37,7 +37,7 @@
     <li>Google Forms – Complaint submission</li>
     <li>Google Sheets – Complaint database</li>
     <li>Google Drive – Image storage</li>
-    <li>Google Maps – Location tagging</li>
+    <li>Google Sites – Website Demonstartion</li>
   </ul>
  <h2>🌍 Impact</h2>
   <p>
